セクションとあとがき

--- a/MAY2015/abelian_cat.tex
+++ b/MAY2015/abelian_cat.tex
@@ -1,6 +1,6 @@
 %\Section{アーベル圏入門(鯖白(奴隷))}
 \Chapter{アーベル圏入門(鯖白(奴隷))}
-\Section{\S 1圏について}
+\Section{\S 1. 圏について}
 
 \begin{defi}
 圏$\mathcal{C}$は，
@@ -167,7 +167,7 @@ $\mathcal{C},\mathcal{D}$を圏．$F,G$を$\mathcal{C}$から$\mathcal{D}$への
 \]
 \end{defi} \proofend
 
-\Section{\S 2アーベル圏について}
+\Section{\S 2. アーベル圏について}
 \begin{defi}
 圏$\mathcal{A}$が{\bf 加法圏}(additive category)であるとは，以下を満たすことである．
 \begin{itemize}
