miyamotoの定理番号の整理

--- a/MAY2015/main.tex
+++ b/MAY2015/main.tex
@@ -69,6 +69,13 @@
 \newtheorem{cor}[defi]{系}
 \newtheorem{prop}[defi]{命題}
 \newtheorem{ex}[defi]{例}
+
+\newtheorem{defm}{定義}
+\newtheorem{thmm}[defm]{定理}
+\newtheorem{lemm}[defm]{補題}
+\newtheorem{corm}[defm]{系}
+\newtheorem{propm}[defm]{命題}
+\newtheorem{exm}[defm]{例}
 %
 \theoremstyle{definition}
 \newtheorem{defn}{定義}[section]
@@ -88,7 +95,9 @@
 \usepackage{wrapfig}
 
 %sp1
-\usepackage{here}%satoken
+\usepackage{here}
+
+%satoken
 \newtheorem{sprop}{命題}
 \newtheorem{slem}{補題}
 \newtheorem{sthm}{定理}
