--- a/MAY2015/zetamura.tex
+++ b/MAY2015/zetamura.tex
@@ -163,6 +163,10 @@ $s=-n\,(n\in\mathbb{N})$のとき,式(\ref{eq:3})より
 &=& (-1)^n \frac{B_{n+1}}{n+1}
 \end{eqnarray*}
 
+ただしここでの$B_n$とはベルヌーイ数のことであり,ベルヌーイ数は$\frac{x}{e^x-1}$のマクローリン展開の係数によって以下のように定義される\\ 
+\[
+\frac{x}{e^x-1} = \sum_{n=0}^{\infty} \frac{B_n}{n!} x^n
+\]
 また, $n$を$2n-1$とすれば
 \[
 \zeta(-(2n-1))=(-1)^{2n-1}\frac{B_{2n}}{2n}
