--- a/MAY2015/diagram.tex
+++ b/MAY2015/diagram.tex
@@ -1,25 +1,25 @@
-\Chapter{追跡！だいあぐらむ　ちぇいしんんぐ！}
+\Chapter{追跡！だいあぐらむ　ちぇいしんぐ！}
 \Section{\S 0.はじまり〜大事なのはカーネルとイメージ〜}
 \textbf{集合}とは\underline{ものの集まり}です。\\
 例：果物全体の\textbf{集合}：りんごやみかんが入っている。\\
-整数全体の\textbf{集合}：0,1,2,3とか-1,-2,-3とかが入っている。\par
+整数全体の\textbf{集合}：$0,1,2,3$とか$-1,-2,-3$とかが入っている。\par
 集合$A$に$a$が入っていることを$a \in A$と書く。
 　　\\
 \textbf{写像}とは\underline{集合間の対応}です。\\
-例：りんごを100円に、みかんを80円にする\\ 
+例：りんごを$100$円に、みかんを$80$円にする\\ 
 りんご $\mapsto 100$　、　みかん　$\mapsto 80$　と書く。\\
 写像には$f$や$g$と言った名前をつける。\\
-$f:a \mapsto b$と書いて元の対応、$f:A\rightarrow B$とかいて集合の対応。\\
-$f$で$a$を送った先を$f(a)$とかく\par
+$f \colon a \mapsto b$と書いて元の対応、$f \colon A\rightarrow B$とかいて集合の対応。\\
+$f$で$a$を送った先を$f(a)$とかく。\par
 　　　\\
 整数全体の集合を$\mathbb{Z}$と書いて、その写像を見てみましょう。\\
 (1) $a: n \mapsto n $  つまり　$ 1 \mapsto 1 , 2 \mapsto 2 , 3 \mapsto 3 $ \\
 (2) $b: n \mapsto 2n $  つまり　$ 1 \mapsto 2 , 2 \mapsto 4 , 3 \mapsto 6 $ \\
 (3) $c: n \mapsto n-2 $ つまり　$ 1 \mapsto -1 , 2 \mapsto 0 , 3 \mapsto 1 $ \\
-(4) $d: n \mapsto n^2 $ つまり　$ 1 \mapsto 1 , 2 \mapsto 4 , 3 \mapsto 6 $ \\
+(4) $d: n \mapsto n^2 $ つまり　$ 1 \mapsto 1 , 2 \mapsto 4 , 3 \mapsto 9 $ \\
    \\
 写像$f$によって$0$に送られるもの全部を $\Ker f$（かーねる　えふ）と書く。\\
-写像$f$によって送らたもの全部を $\Image f$（いめーじ　えふ）と書く。\\
+写像$f$によって送られてきたもの全部を $\Image f$（いめーじ　えふ）と書く。\\
 　　　\\
 (1)$\Image a = \Z  ,  \Ker a = \{0\}$\\
 (2)$\Image b = 2\Z = \{… , -4 , -2 , 0 , 2 , 4 , 6 , …\} =偶数  ,  \Ker b = \{0\}$\\
@@ -63,25 +63,25 @@ $\Image f \subset \Ker g$はたやすい。何故ならば、$ g \circ f = 0$を
 \Section{\S 2.ダイアグラムチェイシング(入門編)}
 (1) \[
 \xymatrix{
-0 \ar[r]^{} & A \ar[r]^{f} &B  \\
+0 \ar[r]^{0_i} & A \ar[r]^{f} &B  \\
 }
 \]\\
 が完全であるとき、$f$は単射である。\\
 (解)\\
-$ 0 \rightarrow A $とは $0$を$0$に送るだけの写像である。よって、$\Image = 0$。\\
-完全なので、$ \Ker f = \Image = \{0\} $である。\\
-これは単射にほかならない。何故ならば、0に行くものは0唯一つということを示しているからである。\\
+$ 0_i \colon 0 \rightarrow A $とは $0$を$0$に送るだけの写像である。よって、$\Image 0_i = 0$。\\
+完全なので、$ \Ker f = \Image 0_i = \{0\} $である。\\
+これは単射にほかならない。何故ならば、$0$に行くものは$0$唯一つということを示しているからである。\\
 $f(a)=f(b)$ならば、$f(a-b) = f(a)-f(b) = 0$ よって$ a-b \in \Ker f$つまり、$a-b=0$よって$a=b$とも言える。
 
 (2) \[
 \xymatrix{
-A \ar[r]^{f} & B \ar[r]^{} &0  \\
+A \ar[r]^{g} & B \ar[r]^{0_t} &0  \\
 }
 \]\\
 が完全であるとき、$g$は全射である。\\
 (解)\\
-$ B \rightarrow 0 $とは、すべてのBの元を$0$に送る写像である。よって、$\Ker = B$。\\
-完全なので、$ \Image f = \Ker g = B $である。よって全射。\\
+$ 0_t \colon B \rightarrow 0 $とは、すべての$B$の元を$0$に送る写像である。よって、$\Ker 0_t = B$。\\
+完全なので、$ \Image g = \Ker 0_t = B $である。よって全射。\\
    　　　\\
 　　\\
 (3) \[
@@ -99,11 +99,11 @@ $ B \rightarrow 0 $とは、すべてのBの元を$0$に送る写像である。
 0 \ar[r]^{} &2\Z \ar[r]^{i} &\Z \ar[r]^{p} &2 \ar[r]^{} &0  \\
 }
 \]\\
-は完全である。\\
-(解)\\
+は完全である。ただし、\\
 $i$とは、$2n \mapsto 2n$となるような写像である。\\
 $2$とは、\{0,1\}のことである。\\
-$p$とは、偶数を$0$に、奇数を$1$に移すような写像である\\
+$p$とは、偶数を$0$に、奇数を$1$に移すような写像である。\\
+(解)\\
 $i$は単射で、$p$は全射である。\\
 $\Ker p = 2\Z , \Image i = 2\Z$より完全である。\\
 
@@ -132,16 +132,16 @@ $\Ker p = 2\Z , \Image i = 2\Z$より完全である。\\
 &x \ar[d]^p \\
 &0 \ar[r]^g &0}
 \]
-ここで、$q$は単射と仮定したので、$q$で送って$0$に行くのは$0$のみである。
-\[
-\xymatrix{ 
-&x \ar[d]^p &0\ar[d]^q\\
-&0 \ar[r]^g &0}
-\]
 図式の可換性より、
 \[
 \xymatrix{ 
-&x \ar[d]^p \ar[r]^f &0 \ar[d]^q\\
+&x \ar[d]^p \ar[r]^f &f(x) \ar[d]^q\\
+&0 \ar[r]^g &0}
+\]
+ここで、$q$は単射と仮定したので、$q$で送って$0$に行くのは$0$のみである。
+\[
+\xymatrix{ 
+&x \ar[d]^p \ar[r]^f &f(x)=0 \ar[d]^q\\
 &0 \ar[r]^g &0}
 \]
 となり、$f$は単射であるので、$x=0$となった。よって、$p$は単射である。\\
@@ -150,30 +150,30 @@ $\Ker p = 2\Z , \Image i = 2\Z$より完全である。\\
 \[
 \xymatrix{
 & A  \ar[d]^p \ar[r]^f & B \ar[d]^q 
-\\ & C \ar[r]^g & D \ar[r]^{} &0　&(完全)}
+\\ & C \ar[r]^g & D \ar[r]^{0_t} &0　&(完全)}
 \]
 このとき$p$が全射ならば、$q$も全射である。\\
 (解)\\
-示したいことは、$d \in D$に対して、$b \in B$があって、$ q(b)=c $となることである。\\
-よって、まず$d \in D$ とする。$d$を右に送ると$0$に行くので$\Ker =  \Image g$に入ってる。よって、\\
+示したいことは、$d \in D$に対して、$b \in B$があって、$ q(b)=d $となることである。\\
+よって、まず$d \in D$ とする。$d$を右に送ると$0$に行くので$\Ker 0_t =  \Image g$に入ってる。よって、\\
 \[
 \xymatrix{
-& c \ar[r]^g & d \ar[r]^{} &0}
+& c \ar[r]^g & d \ar[r]^{0_t} &0}
 \]
 となるような$c$が存在する。$p$は全射であると仮定したので、\\
 
 \[
 \xymatrix{
 & a \ar[d]^p\\
-& c \ar[r]^g & d \ar[r]^{} &0}
+& c \ar[r]^g & d \ar[r]^{0_t} &0}
 \]
 となるような$a$が存在する。これを$f$で送ってみると、\\
 \[
 \xymatrix{
 & a \ar[d]^p \ar[r]^f &f(a)\\
-& c \ar[r]^g & d \ar[r]^{} &0}
+& c \ar[r]^g & d \ar[r]^{0_t} &0}
 \]
-$f(a)$を$q$で送ってみると、$q(f(a)) = g(p(a)) = d$となる。\\
+$f(a)$を$q$で送ってみると、図式の可換性より$q(f(a)) = g(p(a)) = d$となる。\\
 よって、\\
 \[
 \xymatrix{
@@ -186,10 +186,8 @@ $f(a)$を$q$で送ってみると、$q(f(a)) = g(p(a)) = d$となる。\\
 (3)
 \[
 \xymatrix{
-0  
-\ar[r]{} 
-& A  \ar[d]^p \ar[r]^f & B \ar[d]^q \ar[r]^g & C \ar[d]^r &(完全)
-\\ & D \ar[r]^h & E \ar[r]^i & F &(完全)}
+& A  \ar[d]^p \ar[r]^f & B \ar[d]^q \ar[r]^g & C \ar[d]^r \ar[r]^{0_t} &0 &(完全)
+\\ & D \ar[r]^h & E \ar[r]^i & F & &(完全)}
 \]
 このとき$p$が全射、$q$が単射ならば、$r$も単射である。\\
 (解)\\
@@ -199,34 +197,34 @@ $f(a)$を$q$で送ってみると、$q(f(a)) = g(p(a)) = d$となる。\\
 & c  \ar[d]^r \\
 & 0}
 \]
-次に、$c$を右に送ると、$0$より、$c \in \Ker = \Image g$よって、
+次に、$c$を右に送ると、$0$より、$c \in \Ker 0_t = \Image g$よって、
 \[
 \xymatrix{ 
-&b \ar[r]^g & c  \ar[d]^r \ar[r] &0 \\
+&b \ar[r]^g & c  \ar[d]^r \ar[r]^{0_t} &0 \\
 & & 0}
 \]
 となるような$b$が存在する。これを$q$で送って、$i$で送ってみると可換性より、
 \[
 \xymatrix{ 
-&b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r] &0 \\
+&b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r]^{0_t} &0 \\
 &q(b) \ar[r]^i & 0}
 \]
 よって、$q(b)$は$\Ker i = \Image h$に入っている事がわかり、
 \[
 \xymatrix{ 
-& &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r] &0 \\
+& &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r]^{0_t} &0 \\
 &d \ar[r]^h &q(b) \ar[r]^i & 0}
 \]
 となるような、$d$が存在する。ここで、$p$は全射より、
 \[
 \xymatrix{ 
-&a \ar[d]^p &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r] &0 \\
+&a \ar[d]^p &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r]^{0_t} &0 \\
 &d \ar[r]^h &q(b) \ar[r]^i & 0}
 \]
 となるような$a$が存在する。ここで、$f(a)$について、$q(f(a))=q(b)$かつ$q$は単射より$f(a)=b$よって、
 \[
 \xymatrix{ 
-&a \ar[d]^p \ar[r]^f &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r] &0 \\
+&a \ar[d]^p \ar[r]^f &b \ar[r]^g \ar[d]^q & c  \ar[d]^r \ar[r]^{0_t} &0 \\
 &d \ar[r]^h &q(b) \ar[r]^i & 0}
 \]
 となった。いま上の行の完全性より、$ c = g(f(a)) = 0 $ がなりたち、$c=0$がわかった。やったぜ！\\
