--- a/MAY2015/maegaki.tex
+++ b/MAY2015/maegaki.tex
@@ -2,4 +2,4 @@
 東京大学理学部数学科・大学院数理科学研究科は駒場Ⅰキャンパスにある学科・研究科です。数学科には東大中の数学を愛する天才・秀才たち約45名が集まります。私達が日々勉強・研究を行う``数理科学研究棟''（別名数理病棟）では、個性豊かな数学を愛する人達が飛んだりはねたり踊ったりしています。院試にじゃがいもを持ってくる人やインターネット上で女子大生と仮定しても矛盾しない発言を繰り返す人や院試の合格発表から逃げるために山にこもる人やいつも裸足で大学に来る人や友人の誕生日をすべて暗記している人や美術や音楽や経済学などの才能もある山岳ガイドや自称女子小学生などがいます。（もちろん普通な人もたくさんいて多種多様な学科ですが、みな数学が好きという共通点によってまとまりを持っています。）みんなとても面白い人ばかりでここに書いていたらきりがありません。私はこの学科が大好きです。この大好きな学科のありのままの姿を伝えたくて、駒場から本郷まで井の頭線と銀座線と丸ノ内線を乗り継いでやって来ました。\par
 そんな私の大好きな数学科が有志で作り上げたこの冊子$e^{\pi i}sode$も今回でvol.3となりました。vol.1では岡潔やブルバキ、ワイエルシュトラスなどの数学者の伝記、vol.2では古田教授へのインタビューや数学科・大学院数理科学研究科の学生へのアンケートや4年生のセミナーの紹介などをしました。vol.3では、数学的なバックグラウンドを持つ方だけでなく数学好きの高校生や一般の方などにも読んでもらえるような記事をたくさん揃えました。普段数学に慣れ親しんでいない方には、数式がたくさん並んでいてびっくりしてしまうかもしれませんが、じっくり読んでいただければと思います。\par　
 本企画・冊子を通じて数学に興味を持っていただけたのならば、私達にとってこれほどまでに嬉しい事はありません。図書館や大きな書店に行って数学書を手に入れれば家にいながらさらに広い数学の世界を旅する事ができます。東大数学科に興味を持ったという場合は高校生や大学生向けに説明会を開いていますので是非参加してみてください。
-（伊藤克哉）
+（伊藤充城）
