--- a/MAY2015/yamamoto.tex
+++ b/MAY2015/yamamoto.tex
@@ -5,7 +5,7 @@
 %\author{山本}
 
 %パッケージ
-
+\Chapter{積分の歩み（山本）}
 
 高校数学の花形でもある「微分積分」は，解析学という大きな一分野の基本的な操作となっています．しかしながら，これらが現在の解析学においてどのように利用されているか，それに至るまでには数百年に渡る紆余曲折がありました．そこで今回は，特に「積分」という操作について，歴史の中でどのような道を辿ってきたのか，それを大雑把に概観してみたいと思います．
 \Section{\S 1. 積分のはじまりから微分との関係性まで}
