とりあえず
まだ全然書き上がってないですが,とりあえず上げます.

--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -1,11 +1,3 @@
-%\usepackage{amssymb}
-%\usepackage{amsmath}
-%\usepackage{mathrsfs}
-%\usepackage{bm}
-%\newtheorem{theo}{定理}[section]
-%\newtheorem{lemm}[theo]{補題}
-%\newtheorem{prop}[theo]{命題}
-
 \Chapter{非可換幾何の呼び声（TN）}
 \Section{はじめに}
 いきなりで申し訳ないのですが,本稿で非可換幾何学の理論を展開することはありません.タイトル詐欺もいいところですが,幾何と作用素環の間の対応を見て,そこから非可換幾何への着想を紹介いたします.
@@ -149,7 +141,7 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 　これで可換とは限らない任意の$C^*$-環があるHilbert空間上の有界線型作用素のなす$C^*$-環と対応付けられることがわかった.実はHilbert空間は量子力学が展開される空間であり,有界線型作用素は量子力学における物理量を表す役割を果たしている.作用素の積は一般に非可換であり,その非可換性が実際に物理学の中で大きな役割を果たしている.したがって,そのような意味で非可換な$C^*$-環は非可換な量子力学的空間と対応しているとみなせる.なお,状態という言葉は量子力学に由来する.\\
 　その他の例として,局所コンパクト空間上の力学系を考えると,図形の空間的な情報と力学系による時間発展の情報の両方を持つ非可換なC*-環が得られる.\\
 　このように非可換な$C^*$-環は非可換な空間の情報を持ったものであり,それを調べることにより,「非可換な空間」を得ることができる.
-\section{あとがき}
+\Section{あとがき}
 　あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
 \Subsubsection{参考文献}
