--- a/KOMABA2015/ito.tex
+++ b/KOMABA2015/ito.tex
@@ -229,7 +229,7 @@ $f,\phi,C$を上の定義と同様とし,$I=[a,b]$となるときに次が成り
 $f:\R^2\to\R$を$f(x)=1$という定数関数にして,$\phi:[0,1] \to \R^2$を$\phi(t)=(t,t)$で定める.\\
 このとき
 \[
-\int_C f(x) ds = \int_0^1 |(t,t)| dt = \int_0^1 \sqrt{2} t dt  = \sqrt{2}
+\int_C f(x) ds = \int_0^1 |(1,1)| dt = \int_0^1 \sqrt{2}  dt  = \sqrt{2}
 \]
 です.この積分は$(0,0)$と$(1,1)$を結ぶ直線の長さ$\sqrt{2}$を求めています.
 \exx
