あさか編集
asaka.texに図を入れました

--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -1,5 +1,7 @@
 \documentclass[notombow,a5,openany]{kyouritu}
-\usepackage[dvipdfmx]{graphicx}
+\usepackage{color} 
+\RequirePackage[dvipdfmx]{graphicx}
+\usepackage{tikz}
 \usepackage{makeidx,multicol}
 \usepackage{amsmath ,amssymb ,amsthm}
 %プリアンブル
@@ -41,7 +43,6 @@
 \usepackage{wrapfig}
 \usepackage{type1cm}
 \usepackage{comment}
-\usepackage{tikz}
 \newtheorem{athm}{Theorem}
 \newtheorem{aprop}[athm]{Proposition}
 \newtheorem{adefi}[athm]{Definition}
