--- a/KOMABA2015/asaka.tex
+++ b/KOMABA2015/asaka.tex
@@ -3,10 +3,10 @@
 
 
 \Section{序}
-形を知りたい―宇宙の形を知りたい、ある特定のタンパク質の形を知りたい―というような欲動はおそらく絶えずあって、調べ始めるにはどの範囲までの形を考えるのか、どの程度似ていたら同じものとみなすのか決めないといけない．ここで考えるのは、複素平面から作られるトーラス全体で、双正則同値になっているものは同じとみなす．さらにトーラスにマーキングをつけて、なお厳しい見方で、マーキングされたトーラスを類別する．このようなトーラス全体が、トーラスのタイヒミュラー空間である．この何を言ってるのか分からない話を分かるように、以下、努力していきたい．もし分からなかったら著者のせいである．
+形を知りたい―宇宙の形を知りたい,ある特定のタンパク質の形を知りたい―というような欲動はおそらく絶えずあって,調べ始めるにはどの範囲までの形を考えるのか,どの程度似ていたら同じものとみなすのか決めないといけない．ここで考えるのは,複素平面から作られるトーラス全体で,双正則同値になっているものは同じとみなす．さらにトーラスにマーキングをつけて,なお厳しい見方で,マーキングされたトーラスを類別する．このようなトーラス全体が,トーラスのタイヒミュラー空間である．この何を言ってるのか分からない話を分かるように,以下,努力していきたい．もし分からなかったら著者のせいである．
 
 \Section{トーラス}
-複素平面からトーラスを作る．複素平面とは、実数だけだと数が足りないために$1$乗して$-1$になる数$i$を加え、実数を拡張したものである．
+複素平面からトーラスを作る．複素平面とは,実数だけだと数が足りないために$1$乗して$-1$になる数$i$を加え,実数を拡張したものである．
 \begin{wrapfigure}{r}{3cm} 
 \begin{tikzpicture}[domain=-3:3, samples=64, scale=0.8]
 \footnotesize
@@ -21,7 +21,7 @@
 $(a+bi)+(c+di)=(a+c)+(b+d)i$\\
 $(a+bi)(c+di)=(ac-bd)+(b+d)i$\\
 ($a$,$b$,$c$,$d$は実数)\\
-と足し算、かけ算が定義され、引き算、割り算もそれから導かれる．
+と足し算,かけ算が定義され,引き算,割り算もそれから導かれる．
 複素平面から何か平行四辺形を切り抜こう．例えば\\
 \begin{tikzpicture}
 \draw (0,0) rectangle (2,1);
@@ -29,28 +29,23 @@ $(a+bi)(c+di)=(ac-bd)+(b+d)i$\\
 \coordinate [label=right:{2+i}] (2+i) at (2,1);
 \end{tikzpicture}
 
-を切り抜くことにする．そして、対辺をそれぞれ貼り合わせると
+を切り抜くことにする．そして,対辺をそれぞれ貼り合わせると
+\\
 \begin{figure}[h]
-\includegraphics[width=5cm]{asaka3.png}
+\includegraphics[width=8cm,bb=0 0 452 217]{asaka3.png}
 \end{figure}
 とドーナツの表面となった．これがトーラスである．\\
-実は切り抜くという操作はあまり良くない．なぜなら数学において境界は大事なのに、切り抜くと境界での構造がぐしゃぐしゃしてしまうからである．余裕のある人はもう少し良いイメージで考えてほしいのだが、それはトイレットペーパーである．切り抜いてしまわずに、複素平面全体をくるくると巻いていく．今回の例で行くと、0と2を結ぶ線分とiと2+iを結ぶ線分がぴたりと一致するように縦に巻き、以降同じ周期でくるくる巻くことにする．複素平面に厚さはないものと考えれば、このように巻ける．複素平面において0と2を結ぶ線分より下にある部分もすでに同じように巻かれていたとする．すると無限に重なった巻物が得られ、さらに0とiを結ぶ線分と2と2+iを結ぶ線分が重なるように横にも周期的に巻いていく．現実の紙だと紙が交差してできないが、この複素平面は自分を通り抜けられると考えれば巻いていける．これによって、平行四辺形が無限個重なったドーナツの表面がえられる．これがトーラスである．\\
-複素平面から作り出したので、トーラスは、詳しくは説明できないが複素平面由来の構造を持っている。このトーラスは長方形の選び方によって形が違う気がする．この話を次の節にもっていく．
+実は切り抜くという操作はあまり良くない．なぜなら数学において境界は大事なのに,切り抜くと境界での構造がぐしゃぐしゃしてしまうからである．余裕のある人はもう少し良いイメージで考えてほしいのだが,それはトイレットペーパーである．切り抜いてしまわずに,複素平面全体をくるくると巻いていく．今回の例で行くと,0と2を結ぶ線分と$i$と$2+i$を結ぶ線分がぴたりと一致するように縦に巻き,以降同じ周期でくるくる巻くことにする．複素平面に厚さはないものと考えれば,このように巻ける．複素平面において0と2を結ぶ線分より下にある部分もすでに同じように巻かれていたとする．すると無限に重なった巻物が得られ,さらに$0$と$i$を結ぶ線分と$2$と$2+i$を結ぶ線分が重なるように横にも周期的に巻いていく．現実の紙だと紙が交差してできないが,この複素平面は自分を通り抜けられると考えれば巻いていける．これによって,平行四辺形が無限個重なったドーナツの表面がえられる．これがトーラスである．\\
+複素平面から作り出したので,トーラスは,詳しくは説明できないが複素平面由来の構造を持っている。このトーラスは長方形の選び方によって形が違う気がする．この話を次の節にもっていく．
 
 \Section{トーラスのモデュライ空間}
-トーラスの形が同じであるということを双正則同値によって定める．双正則同値の説明は著者の力量不足のためうまくできない．それでも一応、大雑把に言うと、双正則同値とは、トーラスの持つ複素平面由来の構造が等しいということである．\\
-また、別の言い方をしてみると、２つのトーラスＡ，Ｂに対して、双正則という性質を持つ変換によってＡをＢに変形できるとき、その２つは双正則であるという．これは、例えば、長方形に対して、相似という関係を、一方を拡大か縮小という変換を行ってもう一方に変形できることと説明するのと同じ言い方である．\\
-双正則同値そのものは難しいが、トーラスをつくる型となった平行四辺形を用いると、双正則同値となる十分条件は説明できる．次の事実がある\\
-「複素平面上に２つの平行四辺形A、Ｂがあったとする．Aを縦横比を保ったまま拡大か縮小をして、平行移動と回転移動をすることでBと重なるとき、AからつくられるトーラスとBからつくられるトーラスは双正則同値である」\\
-たとえば\\ 
-\begin{tikzpicture}
-\coordinate [label=left:{0}] (A) at (0,0);
-\coordinate [label=right:{1}](B) at (1,0);
-\coordinate [label=left:{t}](C) at (0.8,2);
-\coordinate [label=right:{1+t}](D) at (1.8,2);
-\draw (A) -- (B) -- (D) -- (C) -- cycle;
-\end{tikzpicture}
-
+トーラスの形が同じであるということを双正則同値によって定める．双正則同値の説明は著者の力量不足のためうまくできない．それでも一応,大雑把に言うと,双正則同値とは,トーラスの持つ複素平面由来の構造が等しいということである．\\
+また,別の言い方をしてみると,２つのトーラスＡ，Ｂに対して,双正則という性質を持つ変換によってＡをＢに変形できるとき,その２つは双正則であるという．これは,例えば,長方形に対して,相似という関係を,一方を拡大か縮小という変換を行ってもう一方に変形できることと説明するのと同じ言い方である．\\
+双正則同値そのものは難しいが,トーラスをつくる型となった平行四辺形を用いると,双正則同値となる十分条件は説明できる．次の事実がある
+\thm
+複素平面上に２つの平行四辺形$A,B$があったとする．$A$を縦横比を保ったまま拡大か縮小をして,平行移動と回転移動をすることで$B$と重なるとき,$A$からつくられるトーラスと$B$からつくられるトーラスは双正則同値である
+\thmx
+\ex 
 \begin{figure}[h]
 \begin{minipage}{0.5\hsize}
 \begin{tikzpicture}
@@ -74,62 +69,188 @@ $(a+bi)(c+di)=(ac-bd)+(b+d)i$\\
 \end{tikzpicture}
 \end{minipage}
 \end{figure}
+\
+のとき,$A$からつくられるトーラスと$B$からつくられるトーラスは同じものである．
+\exx
+このことから,$t$は複素平面上の実軸より上の領域（上半平面と名付ける）を自由に動くとして,以下の平行四辺形\\
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{t}](C) at (0.8,2);
+\coordinate [label=right:{1+t}](D) at (1.8,2);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\\
 
+を考えれば,他のある位置にある平行四辺形からトーラスをつくったとしても,それに応じて$t$をうまく定めれば, 双正則同値なトーラスをつくれる．すなわち,$t$を動かして,$0$と$1$を結ぶ線分と$0$と$t$を結ぶ線分でできる平行四辺形全体を考えれば,すべてのトーラスは考えつくされる．\\
+このことを踏まえ,さらに次の双正則同値と同値な条件がある．\\
+\thm
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{t}](C) at (0.8,2);
+\coordinate [label=right:{1+t}](D) at (1.8,2);
+\coordinate [label=right:{X}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{s}](C) at (0.9,2);
+\coordinate [label=right:{1+s}](D) at (1.9,2);
+\coordinate [label=right:{Y}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\end{figure}
+$X$と$Y$からつくられるトーラスが双正則同値\\
+$\Leftrightarrow \ s=\dfrac {at+b} {ct+d}$をみたす整数$a$,$b$,$c$,$d$が存在して,$ad-bc=1$となる
+\thmx
+\ex
+下図の$A$,$B$によってできるトーラスは双正則同値となる．
+実際,\[
+\frac{3i-4}{4i-5} = \frac{32+i}{42}
+\]
+が成り立っている.
+\exx
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{i}](C) at (0,1);
+\coordinate [label=right:{1+i}](D) at (1,1);
+\coordinate [label=right:{A}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{$\frac{32+i}{42}$}](C) at (0.9,1.1);
+\coordinate [label=right:{$1+\frac{32+i}{42}$}](D) at (1.9,1.1);
+\coordinate [label=right:{B}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\end{figure}
+この関係で互いに等しくならない$t$全体を挙げてみれば,分かったような気になる．これがトーラスのモデュライ空間呼ばれるもので
+以下の様なものである．この灰色部分から点$t$をとり,そこから平行四辺形をつくれば,この型を元にトーラスがつくれる．\\
 
-のとき、AからつくられるトーラスとBからつくられるトーラスは同じものである．
-このことから、tは複素平面上の実軸より上の領域（上半平面と名付ける）を自由に動くとして、以下の平行四辺形\\
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=4cm]{asaka8.png}
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=4cm]{asaka9.jpg}
+\end{minipage}
+\end{figure}
 
-図4.5\\
-
-を考えれば、他のある位置にある平行四辺形からトーラスをつくったとしても、それに応じてtをうまく定めれば、 双正則同値なトーラスをつくれる．すなわち、tを動かして、0と1を結ぶ線分と0とtを結ぶ線分でできる平行四辺形全体を考えれば、すべてのトーラスは考えつくされる．\\
-このことを踏まえ、さらに、次の、双正則同値と同値な条件がある．\\
-「図５　と　図６　からつくられるトーラスが双正則同値$\Leftrightarrow $$s=\dfrac {at+b} {ct+d}$をみたす整数$a$、$b$、$c$、$d$が存在して、$ad-bc=1$となる」\\
-だから例えば\\
-
-図７\\
-
-によってできるトーラスは双正則同値となる．この関係で互いに等しくならないt全体を挙げてみれば、分かったような気になる．これがトーラスのモデュライ空間呼ばれるもので\\
-
-図８\\
-
-これである．この斜線部上の点tをとり、そこから平行四辺形をつくれば、この型を元にトーラスがつくれる．\\
-
-図９\\
-
-つまり、この斜線部上の一点一点がトーラスに対応していて、トーラス全体というものを目の当たりにした．
+つまり,この斜線部上の一点一点がトーラスに対応していて,トーラス全体というものを目の当たりにした．
 
 \Section {トーラスのタイヒミュラー空間}
 トーラス上に向きのある輪をおくと\\
-
-図１０\\
-
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka10.png}\\
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka101.png}\\
+\end{minipage}
+\end{figure}
 この２つの輪はトーラスから離れてしまわないようにどう伸び縮みさせても一点につぶせない．\\
-
-図１１\\
+\includegraphics[width=5cm]{asaka11.png}
 
 このような輪はトーラス上で縮めていけば一点につぶせる．\\
-そのような一点につぶせない輪のかけ方はいくらでもある．ただし、トーラス上を移動して、重ねられるような輪のかけ方は同じとみなす．\\
-
-図12\\
-
-個の一点につぶせない輪のかけ方は、実は最初の２つを組み合わせてすべてつくれる．組み合わせるという言い方はあいまいだが、次の例でなんとなくわかって欲しい．\\
-
-図13\\
-
-実は最初の２つとは別のものからでもあらゆる輪のかけ方を作れる．たとえば\\
-
-図１4\\
-
-でもよい．この輪のかけ方を生み出す元のものを”基本群の標準生成系”と呼ぶことにする．トーラスを一つ選び、さらにその”基本群の標準生成系”をひとつ選ぶことにする．このトーラスと”基本群の標準生成系”のペアを考える．トーラス全体はどのようなものか、前の章で見た．このトーラス一つ一つに標準生成系とのペアを考えることで種類を増やす．トーラスに標準生成系つけた印をマーキングと呼ぶ\\
-もう一度tの動く範囲を上半平面として考える。上半平面上のそれぞれ別の場所にt、sがいても、前の章で言った条件「$s=\dfrac {at+b} {ct+d}$をみたす整数$a$、$b$、$c$、$d$が存在して、$ad-bc=1$となる」を満たせばそこからつくられるトーラスは双正則同値になるのだった．ここで０と１を結ぶ線分（直線でもよい）、１とtを結ぶ線分（直線でもよい）に注目すると、これらの線分（直線）はトーラス上で、”基本群の標準生成系”となっている．sのトーラスについても同じことを考えると”基本群の標準生成系”が得られる。この２つのトーラスは「$s=\dfrac {at+b} {ct+d}$をみたす整数$a$、$b$、$c$、$d$が存在して、$ad-bc=1$となる」を満たせば、双正則同値になるのだった．つまり、双正則な変換によってｔのトーラスはsのトーラスに変形する．しかし”基本群の標準生成系”はどうかというと、証明は省くが、同じになる（tのトーラスをsのトーラスでうつす変換によってtの”基本群の標準生成系”をうつしたものが、トーラス上を動かすことでsの”基本群の標準生成系”に一致させられる）とは限らないのだ．今回は、双正則同値になるだけでなく”基本群の生成元”も含めて一致するものを同じとみなす厳しい見方を採用する．\\
-
-図１５\\
-
-次の事実がある．\\
-「図１６と 図１７からつくられるマーキングされたトーラスが同じになる$\Leftrightarrow $ $t=s$」\\
-これにより、マーキングされたトーラス全体は上半平面と一致する．この上半平面の一点一点がそれぞれ異なるマーキングされたトーラスに対応する．そして、これがトーラスのタイヒミュラー空間である．
-
-図１７
+そのような一点につぶせない輪のかけ方はいくらでもある．ただし,トーラス上を移動して,重ねられるような輪のかけ方は同じとみなす．\\
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka12.png}\\
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka121.png}\\
+\end{minipage}
+\end{figure}
+この一点につぶせない輪のかけ方は,実は最初の$2$つを組み合わせてすべてつくれる．組み合わせるという言い方はあいまいだが,なんとなくわかって欲しい.\\
+実は最初の$2$つとは別のものからでもあらゆる輪のかけ方を作れる．たとえば\\
+\includegraphics[width=5cm]{asaka14.png}
+でもよい．この輪のかけ方を生み出す元のものを”基本群の標準生成系”と呼ぶことにする．トーラスを一つ選び,さらにその”基本群の標準生成系”をひとつ選ぶことにする．このトーラスと”基本群の標準生成系”のペアを考える．トーラス全体はどのようなものか,前の章で見た．このトーラス一つ一つに標準生成系とのペアを考えることで種類を増やす．トーラスに標準生成系つけた印をマーキングと呼ぶ\\
+もう一度tの動く範囲を上半平面として考える。上半平面上のそれぞれ別の場所に$t,s$がいても,前の章で言った条件「$s=\dfrac {at+b} {ct+d}$をみたす整数$a$,$b$,$c$,$d$が存在して,$ad-bc=1$となる」を満たせばそこからつくられるトーラスは双正則同値になるのだった．ここで$0$と$1$を結ぶ線分（直線でもよい）,$1$と$t$を結ぶ線分（直線でもよい）に注目すると,これらの線分（直線）はトーラス上で,”基本群の標準生成系”となっている．$s$のトーラスについても同じことを考えると”基本群の標準生成系”が得られる。この$2$つのトーラスは「$s=\dfrac {at+b} {ct+d}$をみたす整数$a$,$b$,$c$,$d$が存在して,$ad-bc=1$となる」を満たせば,双正則同値になるのだった．つまり,双正則な変換によって$t$のトーラスは$s$のトーラスに変形する．しかし”基本群の標準生成系”はどうかというと,証明は省くが,同じになる（$t$のトーラスを$s$のトーラスでうつす変換によって$t$の”基本群の標準生成系”をうつしたものが,トーラス上を動かすことで$s$の”基本群の標準生成系”に一致させられる）とは限らないのだ．今回は,双正則同値になるだけでなく”基本群の生成元”も含めて一致するものを同じとみなす厳しい見方を採用する．\\
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka12.png}\\
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\includegraphics[width=5cm]{asaka14.png}\\
+\end{minipage}
+\end{figure}
+例えば形は双正則同値でも,次のように左の基本群の生成元が右の基本群の生成元に写ってしまうような写像はだめなのである.
+次の事実がある．
+\thm
+$X$と$Y$からつくられるマーキングされたトーラスが同じになる\\
+$\Leftrightarrow $ $t=s$
+\thmx
+\begin{figure}[h]
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{t}](C) at (0.8,2);
+\coordinate [label=right:{1+t}](D) at (1.8,2);
+\coordinate [label=right:{X}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\begin{minipage}{0.5\hsize}
+\begin{tikzpicture}
+\coordinate [label=left:{0}] (A) at (0,0);
+\coordinate [label=right:{1}](B) at (1,0);
+\coordinate [label=left:{s}](C) at (0.9,2);
+\coordinate [label=right:{1+s}](D) at (1.9,2);
+\coordinate [label=right:{Y}](E) at (0.5,-0.5);
+\draw (A) -- (B) -- (D) -- (C) -- cycle;
+\end{tikzpicture}
+\end{minipage}
+\end{figure}
+これにより,マーキングされたトーラス全体は上半平面と一致する．この上半平面の一点一点がそれぞれ異なるマーキングされたトーラスに対応する．そして,これがトーラスのタイヒミュラー空間である．
+\Section{参考文献}
+%図１７
+\begin{description}
+\item
+$[1]$難波誠『微分積分学』
+（裳華房，1996）
+\item
+$[2]$齋藤正彦『齋藤正彦線型代数学』
+（東京図書，2014）
+\item
+$[3]$斎藤毅『線形代数の世界―抽象数学の入り口』
+（東京大学出版会，2007）
+\item
+$[4]$森田茂之『講座 数学の考え方〈8〉集合と位相空間』
+（朝倉書店，2002）
+\item
+$[5]$斎藤毅『集合と位相』
+(東京大学出版会，2009)
+\item
+$[6]$松本幸夫『多様体の基礎』
+｛東京大学出版会,1988）
+\item
+$[7]$野口潤次郎『複素解析概論』
+（裳華房，1993）
+\item
+$[8]$楠幸男『函数論―リーマン面と等角写像』
+（朝倉書店，2011）
+\item
+$[9]$今吉，谷口『タイヒミュラー空間論』
+（日本評論社，2004）
+\end{description}
+タイヒミュラー空間に関する日本語の本は今のところ$[9]$しかない。そしてその本までたどりつくには少し長い道のりがある。大学１年で習う解析学と線形代数学の初歩をまず学ばなくてはいけない。前者の一例として$[1]$を,後者の例として$[2]，[3]$をあげてみた。[2]より[3]の方がより高度に書かれている。そして,大学２年で習う位相については$[4]，[5]$をあげてみた。$[4]$より$[5]$の方がまた高度に書かれている。以上を踏まえて大学３年で習う,多様体と複素解析の入門書としてそれぞれ$[6]，[7]$をあげてみた。これらを踏まえ$[8]$の第$4$章まで読めれば，$[9]$の第１章にあるトーラスのタイヒミュラー空間の内容を数学的にきちんと捉えられるのではないかと思う。\\
+数学書はとても多くあるにも関わらず,ごく少ない知識で選んでしまったので,ぜひ自分で書店で選んでみてください。以上です。
 
 
 
