--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -96,9 +96,9 @@ $\mathscr{F}\left(x\right)\left(\pi\right)=\pi\left(x\right)$
 \begin{theo}
 $A$を可換$C^*$-環とする.$A$の{\rm Gelfand}表現$\mathscr{F}$は$A$から$C_{\infty}\left(\Omega\left(A\right)\right)$への等距離*-同型である.
 \end{theo}
-　このGelfand-Naimarkの定理により,任意の可換$C^*$-環に対し,ある局所コンパクトハウスドルフ空間上の連続関数環が対応することがわかった.実は局所コンパクトハウスドルフ空間上の連続関数環から元の位相空間を復元することができるので,この定理は可換$C^*$-環と局所コンパクトハウスドルフ空間が対応していることを示している.すなわち\textgt{,可換$C^*$-環の理論は局所コンパクト（ハウスドルフ）空間の理論と等価}とみなしてよいということである.（余談ではあるが,圏論の言葉を用いれば,局所コンパクトハウスドルフ空間の圏と可換$C^*$-環の圏が圏同値である,ということである）\\
+　このGelfand-Naimarkの定理により,任意の可換$C^*$-環に対し,ある局所コンパクトハウスドルフ空間上の連続関数環が対応することがわかった.実は局所コンパクトハウスドルフ空間上の連続関数環から元の位相空間を復元することができるので,この定理は可換$C^*$-環から局所コンパクトハウスドルフ空間を構成できることを示している（その逆も然り）.すなわち\textgt{,可換$C^*$-環の理論は局所コンパクト（ハウスドルフ）空間の理論と等価}とみなしてよいということである.（余談ではあるが,圏論の言葉を用いれば,局所コンパクトハウスドルフ空間の圏と可換$C^*$-環の圏が圏同値である,ということである）\\
 　かくして可換$C^*$-環と局所コンパクト空間という幾何学的な概念が繋がった.この定理はGrothendieckのスキーム論にも影響を与えたと言われている.\\
-　では,可換ではない$C^*$-環は何か幾何学的なものに対応しているとすると,それはどんなものであろうか.おそらく$C^*$-環の非可換性を反映した,何らかの変形を施された,いわば「非可換」な「空間」に対応しているのではないだろうか,と推察される.可換な場合に元の幾何学的な空間の情報を引き出す手段を非可換な場合に適用することで仮想的な「非可換空間」の幾何学的な情報を引き出すことができると言われている.そこで,もう少し一般の可換とは限らない$C^*$-環について調べていく.
+　では,この定理から可換ではない$C^*$-環も何か幾何学的なものに対応しているのではないか,と考えてみる.それはどんなものであろうか.可換$C^*$-環から局所コンパクトハウスドルフ空間を構成できるならば、同じ手続きによって非可換な$C^*$-環から「空間」を構成できるののではないだろうか.それはもはや「点」や「空間」といった概念が意味を成すのかわからないが,ともかく非可換$C^*$-環により構成した「空間」を「非可換空間」ということにしよう.「非可換空間」について知るためにはその基となる非可換な$C^*$-環について知らねばなるまい.そこで,もう少し一般の可換とは限らない$C^*$-環について調べていく.
 \Section{GNS表現}
 \Subsection{$C^*$-環の表現}
 　$A$を（可換とは限らない）$C^*$-環,$\mathfrak{H}$をHilbert空間とする.*-準同型$\pi:A\rightarrow \mathcal{B}\left(\mathfrak{H}\right)$に対し,対$\left(\pi,\mathfrak{H}\right)$をAの\textgt{表現}という.$\pi$が単射であるとき,表現$\left(\pi,\mathfrak{H}\right)$は\textgt{忠実}であるという.
@@ -141,6 +141,15 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 　これで可換とは限らない任意の$C^*$-環があるHilbert空間上の有界線型作用素のなす$C^*$-環と対応付けられることがわかった.実はHilbert空間は量子力学が展開される空間であり,有界線型作用素は量子力学における物理量を表す役割を果たしている.作用素の積は一般に非可換であり,その非可換性が実際に物理学の中で大きな役割を果たしている.したがって,そのような意味で非可換な$C^*$-環は非可換な量子力学的空間と対応しているとみなせる.なお,状態という言葉は量子力学に由来する.\\
 　その他の例として,局所コンパクト空間上の力学系を考えると,図形の空間的な情報と力学系による時間発展の情報の両方を持つ非可換なC*-環が得られる.\\
 　このように非可換な$C^*$-環は非可換な空間の情報を持ったものであり,それを調べることにより,「非可換な空間」を得ることができる.
+\Section{非可換空間の例}
+　ここまで非可換空間と非可換な$C^*$-環が対応するのだろう、という話を見てきたが、簡単な例を用いて実際に非可換な空間を考えて、$C^*$-環が現れることを見ることにする.
+\Subsection{n個の点のなす空間}
+　一般の空間を考えてその上の運動を考えてもよいが、簡単のためにn個の点からなる空間を考えよう.一般の方のイメージする空間からはおよそかけ離れたものであるから,「空間」という言葉に抵抗のある方もいらっしゃるかもしれないが,そういう方はn箇所の駅からなる路線と各駅の間を電車が直通で結んでいるようなイメージなどをしてもらうといいかもしれない.\\
+　各点に便宜上1,2,…nという名前を付けよう.この空間の中での運動を考える.各点iからi自身への運動,つまり運動とは書いているが静止したまま動かないこと,点iから点jへの運動が考えられる.また,点iから点jへの運動の「逆の運動」は点jから点iへの運動である.さらに運動の合成として,点iから点jへの運動と点jから点kへの運動の連続試行:点iから点kへの運動を考えよう.この運動の合成は,もちろん最初の運動の終点と次の運動の始点が同じでなければならないから一般には可換ではない.また,このような運動の中で禁止されているものはないとしよう.点iから点jへの運動を$e_{ji}$と表すことにして,これらのことを式で表すと
+\begin{center}
+$e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}$
+\end{center}
+となる.これはn次の行列単位（$\left(i,j\right)$-成分のみが1で他の成分はすべて0であるようなn次正方行列）に他ならない.こうしたn次行列単位全てを含むような$\mathbb{C}$上の最小の体系は複素数を成分とするn次正方行列の全体$M\left(n;\mathbb{C}\right)$である.従って,このようなn個の点からなる空間での点から点への運動の体系を記述する情報は$M\left(n;\mathbb{C}\right)$内に記録されているはずであろう.そして,$M\left(n;\mathbb{C}\right)$の最小性からこれより小さなものでは情報すべてを記録できない.この$M\left(n;\mathbb{C}\right)$は行列の和と積,複素数倍によりBanach環であり,対合として随伴行列,つまり$A\in M\left(n;\mathbb{C}\right)$の対合$A^*$を複素共役の転置行列$A^*={}^{t}\overline{A}$と定めると,$M\left(n;\mathbb{C}\right)$は非可換な$C^*$-環である.$M\left(n;\mathbb{C}\right)$はHilbert空間$\mathbb{C}^n$上の有界線型作用素のなす$C^*$-環である（Gelfand-Naimarkの定理その2.まぁ,使うまでもなくご存知の結果かもしれませんが…）.
 \Section{あとがき}
 　あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
